# os-installer

./: .gitignore  NEWS  README.md  com.github.p3732.OS-Installer.json  com.github.p3732.OS_Installer.json  com.github.p3732.os_installer.json  meson.build
.build_files/: translators
data/: com.github.p3732.OS_Installer.metainfo.xml  com.github.p3732.OS_Installer.metainfo.xml.in  com.github.p3732.os_installer.desktop.in  com.github.p3732.os_installer.gschema.xml  com.github.p3732.os_installer.metainfo.xml  meson.build
data/resources/: meson.build  os-installer.gresource.xml  style.css
data/resources/ui/: about_dialog.ui.in  confirm_quit_dialog.blp  confirm_quit_popup.blp  main_window.blp  terminal_dialog.blp  window.blp
data/resources/ui/pages/: choices.blp  confirm.blp  desktop.blp  disk.blp  done.blp  encrypt.blp  failed.blp  feature.blp  filter.blp  format.blp  install.blp  internet.blp  keyboard_language.blp  keyboard_layout.blp  keyboard_overview.blp  language.blp  locale.blp  partition.blp  region.blp  restart.blp  software.blp  summary.blp  timezone.blp  user.blp  welcome.blp
data/resources/ui/row/: device_choice_row.blp  device_row.blp  device_summary_row.blp  device_too_small_row.blp  multi_selection_row.blp  no_efi_partition_row.blp  progress_row.blp  selection_row.blp  summary_row.blp
data/resources/ui/widgets/: desktop_entry.blp  device_row.blp  device_too_small_row.blp  labeled_image.blp  multi_selection_row.blp  page_wrapper.blp  progress_row.blp  selection_row.blp  summary_row.blp
docs/: Hacking.md
example_config/: .gitignore  config.yaml  config_to_pot.py
example_config/po/: config.pot  config_to_pot.py  de_DE.po
example_config/scripts/: configure.sh  install.py  install.sh  prepare.sh
misc-build-files/: meson.build  translators
po/: LINGUAS  POTFILES  ar.po  cs.po  da.po  de.po  en.po  en_GB.po  es.po  et.po  fa.po  fr.po  he.po  hr.po  it.po  ka.po  kab.po  meson.build  nl.po  oc.po  os-installer.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  ur.po  vi.po
scripts/: language_codes_to_x_generator.py  list_disk_devices.py
src/: config.py  global_state.py  main.py  meson.build  os-installer.in  state_machine.py
src/core/: config.py  envvar_creator.py  installation_scripting.py  navigation.py  preload_manager.py  state_machine.py  system_calls.py  translator.py
src/provider/: choices_provider.py  desktop_provider.py  disk_provider.py  format_provider.py  internet_provider.py  keyboard_layout_provider.py  language_provider.py  preload_manager.py  slideshow_provider.py  software_provider.py  terminal_provider.py  timezone_provider.py  welcome_provider.py
src/ui/: buttons.py  confirm_quit_dialog.py  page.py  page_wrapper.py  terminal_dialog.py  widgets.py  window.py
src/ui/pages/: choices.py  confirm.py  desktop.py  disk.py  done.py  encrypt.py  failed.py  feature.py  filter.py  install.py  internet.py  keyboard.py  keyboard_layout.py  language.py  locale.py  partition.py  region.py  restart.py  software.py  summary.py  user.py  welcome.py
src/ui/row/: device_rows.py  progress_row.py  selection_row.py  summary_row.py
src/util/: config_translation.py  device_info.py  entry_error_enhancer.py  envvar_creator.py  filterable_object.py  functions.py  installation_scripting.py  installation_step.py  preloadable.py  system_calls.py  translations.py  util.py
